fixing contnet align on window resize

--- a/main-sm.css
+++ b/main-sm.css
@@ -1,6 +1,9 @@
 nav {
-  width: 92%;
   font-size: 1.5em;
+}
+
+nav #wrap {
+  width: 100%;
 }
 
 #landing-text {
